# nextjs-fastapi-postgres-starter

./: Makefile  README.md
backend/: main.py  pyproject.toml
backend/controllers/: user.py
backend/models/: __init__.py  message.py  thread.py  user.py
backend/scripts/: seed.py
backend/services/: ai.py  db.py
frontend/: package-lock.json  package.json  types.ts
frontend/app/: page.tsx
